Project

General

Profile

Actions

Bug #17283

closed

rbd-mirror: potential race condition results in heap corruption

Added by Jason Dillaman over 7 years ago. Updated over 7 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Jason Dillaman
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
jewel
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Changes introduced in commit 4df913d1 might result in concurrent writes to rbd::mirror::ImageReplayer::m_event_entry.


Related issues 1 (0 open1 closed)

Copied to rbd - Backport #17475: jewel: rbd-mirror: potential race condition results in heap corruptionResolvedJason DillamanActions
Actions #1

Updated by Jason Dillaman over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #2

Updated by Mykola Golub over 7 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Loïc Dachary over 7 years ago

  • Copied to Backport #17475: jewel: rbd-mirror: potential race condition results in heap corruption added
Actions #4

Updated by Loïc Dachary over 7 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF