rbd-mirror: concurrent access of event might result in heap corruption

Fixes: http://tracker.ceph.com/issues/17283
Signed-off-by: Jason Dillaman <dillaman@redhat.com>
(cherry picked from commit ac9ad37ab80db8913f9f1149707bd0009f8235c4)